# Himotoku

./: .gitignore  README.md  analysis_options.yaml  build_apk.ps1  flutter_native_splash.yaml  justfile  mason-lock.json  mason.yaml  pubspec.yaml
.mason/: bricks.json
android/: build.gradle
android/app/: build.gradle  google-services.json
lib/: firebase_options.dart  main.dart  test.dart
lib/Data/: Chapter.dart  Chapter.g.dart  Constants.dart  Manga.dart  Manga.g.dart  Setting.dart  Setting.g.dart  SettingDefaults.dart  Theme.dart  notification_controller.dart  time_util.dart  worker.dart
lib/Data/database/: database.dart
lib/Data/models/: Manga.dart  Manga.g.dart  Setting.dart  Setting.g.dart
lib/Extensions/: ExtensionHelper.dart  asura.dart  extension.dart  manganato.dart  reaperscans.dart
lib/Pages/: explore.dart  library.dart  manga_view.dart  settings.dart  source_explore.dart
lib/Pages/Settings/: settings-about-licenses.dart  settings-about.dart  (+3 more)
lib/Routes/: route.dart  route.gr.dart
lib/Services/: Notification.dart
lib/Sources/: Source.dart  SourceHelper.dart  asura.dart  mangabuddy.dart  manganato.dart  reaperscans.dart
lib/Views/: RouteBuilder.dart  explore.dart  library.dart  main_view.dart  manga_view.dart  settings.dart  source_explore.dart
lib/Widgets/: BottomNavBar.dart
lib/rustlib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  rustlib.dart
rustlib/: Cargo.toml  build.rs
rustlib/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
(+19 files in other folders)
